--- a/css/estilos_reserva.css
+++ b/css/estilos_reserva.css
@@ -281,6 +281,7 @@ option {
     }
 
     #datos {
+        min-width: 65px;
         padding: 0;
         margin-bottom: 0;
     }
@@ -299,15 +300,12 @@ option {
 }
 
 /* ---------------------------------------------------------- */
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 550px) and (min-width: 401px) {
     input, select {
         width: 120px;
         height: 16px;
     }
-    #correo {
-        width: 300px;
-    }
-    textarea {
+    textarea, #correo {
         width: 300px;
     }
 
@@ -318,17 +316,23 @@ option {
     #gridFormulario {
         column-gap: 5px;
         width: 90%;
-        grid-template-columns: 40% 40%;
-        margin-left: 0;
+        grid-template-columns: 50% 50%;
+        margin-left: auto;
         margin-right: auto;
     }
     #formulario {
-        width: 90%;
+        width: 99%;
         margin-left: auto;
         margin-right: auto;
     }
     
     #reserva {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #gridReserva {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
@@ -351,7 +355,69 @@ option {
     }
 
     #form {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+/* ----------------------------------------------------------- */
+@media screen and (max-width: 400px) {
+    input, select {
+        width: 120px;
+        height: 16px;
+    }
+    textarea, #correo {
+        width: 280px;
+    }
+
+    #datos label {
+        font-size: 12pt;
+    }
+
+    #gridFormulario {
+        column-gap: 5px;
+        width: 99%;
+        grid-template-columns: 50% 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #formulario {
+        width: 97%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    #reserva {
         width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #gridReserva {
+        width: 99%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .camposFormulario {
+        margin-bottom: 10px;
+    }
+
+    #datos {
+        padding: 0;
+        margin-bottom: 0;
+        min-width: 65px;
+    }
+
+    #reservar {
+        margin: 20px;
+        padding: 15px;
+        font-size: 13pt;
+    }
+
+    #form {
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
